apps/staging/guacamole/httpRedirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: guacamole-http-redirect
  namespace: guacamole
spec:
  parentRefs:
    - name: myrobertson-com-gateway
      namespace: default
      sectionName: rdp-http
  hostnames:
    - rdp.staging.myrobertson.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
