apps/staging/guacamole/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: guacamole
  namespace: guacamole
spec:
  parentRefs:
    - name: myrobertson-com-gateway
      namespace: default
      sectionName: rdp
  hostnames:
    - rdp.staging.myrobertson.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: guacamole
          port: 80
